Making the final required changes to the lab6 assignment.

--- a/labs/lab6/cs591F2014-lab6.tex
+++ b/labs/lab6/cs591F2014-lab6.tex
@@ -21,10 +21,10 @@ Institute of Technology.  You can learn more about AppInventor 2 by visiting the
 \section*{Configuring and Using AppInventor 2}
 
 Before you visit the first Web site mentioned in the previous section, you should install a QR code reader, such as ``QR
-Code Reader'' on your tablet. Now, go to this first Web site and log into it using your ``{\tt @allegheny.edu}''
+Code Reader'', on your tablet. Now, go to this first Web site and log into it using your ``{\tt @allegheny.edu}''
 account. What do you see on the screen? What seems to be some of the key features of AppInventor 2? Once you have
 investigated this program's integrated development environment (IDE), please click on the link labelled ``Set up and
-connect an Android device'' and study the tutorial that explains how to correctly make a WiFi connection. 
+connect an Android device'' and study the tutorial that explains how to correctly make a wireless connection. 
 
 Following these instructions and ultimately using the QR code reader that you installed, scan the QR code created by
 AppInventor 2 and download the correct app. At this point, you can create a new project called, for
@@ -40,7 +40,7 @@ of the button.  Please add ``puzzle pieces''---that is, visual program instructi
 minimum, you should cause the button to change to red when it is clicked and then turn blue when it is long clicked; of
 course, you can add extra widgets and behaviors to your app as well.
 
-Finally, you should create the app so that it can run, stand-alone, on your tablet. Click the ``Build'' menu item at the
+Finally, you should create your app so that it can run, stand-alone, on your tablet. Click the ``Build'' menu item at the
 top of the screen and then follow all of the instructions to download the app to your tablet by again scanning a QR
 code.  As the final task for this laboratory assignment, you should consult online sources, such as
 \url{http://appinventor.mit.edu/explore/ai2/tutorials.html}, to assist you in brainstorming examples of five apps that
