--- a/labs/lab3/hwpre.tex
+++ b/labs/lab3/hwpre.tex
@@ -74,7 +74,7 @@
 %\usepackage{hyperref}
 \usepackage[hidelinks]{hyperref}
 % added in the dtklogos for the bibtex formatting
-\usepackage{dtklogos}
+% \usepackage{dtklogos}
 %=========================
 % One-inch margins everywhere
 %=========================
